--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "eslint-loader": "^2.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3",
